# pipe-dream

./: README.md  meson.build  place.pumpkin.pipedream.json  place.pumpkin.steamwishlistorderer.json
data/: meson.build  place.pumpkin.pipedream.desktop.in  place.pumpkin.pipedream.gschema.xml  place.pumpkin.pipedream.metainfo.xml.in  place.pumpkin.pipedream.service.in  place.pumpkin.steamwishlistorderer.desktop.in  place.pumpkin.steamwishlistorderer.gschema.xml  place.pumpkin.steamwishlistorderer.metainfo.xml.in  place.pumpkin.steamwishlistorderer.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.js  meson.build  place.pumpkin.pipedream.data.gresource.xml  place.pumpkin.pipedream.src.gresource.xml  place.pumpkin.steamwishlistorderer.data.gresource.xml  place.pumpkin.steamwishlistorderer.src.gresource.xml  steam.js  window.js  window.ui  wishlist_entry_list_row.js  wishlist_entry_list_row.ui
